# pyserver

./: .env.dev  .gitignore  README.md  pyproject.toml
scripts/: start.sh
src/prod_server/: config.py  main.py
src/prod_server/db/: connection.py
src/prod_server/models/: user_models.py
src/prod_server/routes/: user_routes.py
src/prod_server/services/: user_service.py
