[project]
name = "prod-server"
version = "0.1.0"
description = "Production FastAPI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
dev = "prod_server.main:dev"

[tool.setuptools.packages.find]
where = ["src"]
