[project]
name = "prod-server"
version = "0.1.0"
description = "Production FastAPI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "render-sdk>=0.6.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
dev = "prod_server.main:dev"
prod = "prod_server.main:prod"
prod_env = "prod_server.main:prod"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"